[package]
name = "ppk2"
version = "0.1.3"
edition = "2021"
authors = ["Henk Oordt <hd@oordt.dev>"]
description = "A driver for Nordic's Power Profiler Kit 2"
readme = "README.md"
repository = "https://github.com/hdoordt/ppk2-rs"
license = "MIT"
keywords = ["PPK2", "Power", "Profiler", "Nordic", "Serial"]
categories = ["embedded", "development-tools::profiling"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_enum = "0.7.3"
serialport = "4.7.2"
thiserror = "2.0.12"
tracing = "0.1.41"

[dev-dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
ctrlc = "3.4.7"
tracing-subscriber = "0.3.19"
clap = { version = "4.5.40", features = ["derive", "env"] }

[badges]
maintenance = { status = "passively-maintained" }
